# app/Models/Blogs.php
@@ -9,9 +9,10 @@ class Blogs extends Model
 {
     use HasFactory;
 
+    protected $table = 'blogs';
+
     protected $fillable = [
         'title',
-        'banner_image',
         'user_id',
         'content',
     ];
